examples/test/testpolicy5388.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5388
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key11: value32
      key30: value47
      key15: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value33
      podSelector:
        matchLabels:
          key22: value5
